# lillycoder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
WORKINGDIR/sample-project/: README.md
WORKINGDIR/sample-project/data/: log.txt  users.csv
WORKINGDIR/sample-project/notes/: TODO.md
WORKINGDIR/sample-project/src/: calculator.js  server.js  util.py
debian/: changelog  control  copyright  postinst  postrm  rules
docs/: index.html  robots.txt  sitemap.xml
lib/lillycoder/: __init__.py  __main__.py  agent.py  config.py  context.py  discovery.py  endpoint.py  permissions.py  pinned.py  repl.py  safety.py  sessions.py  spinner.py  toolcheck.py
lib/lillycoder/persona/: adult.md  analytical.md  default.md  sweet.md  tsundere.md  yandere.md
lib/lillycoder/tools/: __init__.py  bash.py  edit.py  find.py  grep.py  ls.py  mkdir.py  mv.py  persona.py  persona_admin.py  pkg.py  read.py  registry.py  rm.py  write.py
scripts/: build-deb.sh  get.sh  persona-smoke.py  persona-tools-e2e.py  sessions-smoke.py
tests/: run_capability_matrix.py
