[project]
name = "lillycoder"
version = "0.1.3"
description = "Local-first coder REPL with file + shell tools, talks to any OpenAI-compatible /v1 endpoint."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ramazan Yavuz", email = "yavuzramazan1994@gmail.com" }]
keywords = ["llm", "cli", "coding-assistant", "local", "repl", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "rich>=13.7",
    "pydantic>=2.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ra-yavuz/lillycoder"
Repository = "https://github.com/ra-yavuz/lillycoder"
Issues = "https://github.com/ra-yavuz/lillycoder/issues"

[project.scripts]
lillycoder = "lillycoder.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "lib" }

[tool.setuptools.packages.find]
where = ["lib"]
include = ["lillycoder*"]

[tool.setuptools.package-data]
lillycoder = ["persona/*.md", "persona/*.txt"]
